🔧 fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,8 @@
 	justify-content: center;
 	padding: 0;
 	margin: 0 0.5rem;
-	flex-grow: 0.2;
+	width: 1rem;
+	flex-grow: 0.22;
 }
 
 .timer-start {
